force-app/main/marketplace/objects/MarketplaceConversationReply__e/MarketplaceConversationReply__e.object-meta.xml
<CustomObject>
    <description>Platform event emitted when an agent reply is sent to a marketplace conversation.</description>
    <label>Marketplace Conversation Reply</label>
    <pluralLabel>Marketplace Conversation Replies</pluralLabel>
</CustomObject>