force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/AttachmentCount__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCount__c</fullName>
    <description>Number of attachments linked to the message</description>
    <label>Attachment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>