force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Associated brand</description>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>