force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Two-letter ISO country code of the conversation</description>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>