force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Marketplace__c</fullName>
    <description>Marketplace where the conversation originates (Amazon, Allegro, etc.)</description>
    <label>Marketplace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>