force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/MarketplaceConversationId__c.field-meta.xml
<CustomField>
    <fullName>MarketplaceConversationId__c</fullName>
    <description>Conversation identifier from the marketplace API</description>
    <label>Marketplace Conversation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>