force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/MessageBody__c.field-meta.xml
<CustomField>
    <fullName>MessageBody__c</fullName>
    <description>Text message sent by the agent</description>
    <label>Message Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>