force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/ReplyType__c.field-meta.xml
<CustomField>
    <fullName>ReplyType__c</fullName>
    <description>Type of reply: TEXT, ATTACHMENT, TEXT_AND_ATTACHMENT</description>
    <label>Reply Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>