force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/SalesforceMessageId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceMessageId__c</fullName>
    <description>Salesforce ID of Message__c representing the reply</description>
    <label>Salesforce Message ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>