force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <description>Display name of the replying agent</description>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>