force-app/main/marketplace/objects/MarketplaceConversationReply__e/fields/SentAt__c.field-meta.xml
<CustomField>
    <fullName>SentAt__c</fullName>
    <description>Timestamp when the reply was sent</description>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>